enable entry number query in lemma and fix lookup
